center builder block elements and fixing overflow issue

--- a/app/bundles/CoreBundle/Assets/css/app.css
+++ b/app/bundles/CoreBundle/Assets/css/app.css
@@ -4724,6 +4724,8 @@ th.col-id {
 }
 span.slot-caption {
   font-size: 12px;
+  line-height: 18px;
+  display: inline-block;
 }
 .imagecard-caption,
 figcaption {
