--- a/app/bundles/CoreBundle/Assets/css/app/less/custom.less
+++ b/app/bundles/CoreBundle/Assets/css/app/less/custom.less
@@ -273,6 +273,8 @@ td.col-id, th.col-id {
 }
 span.slot-caption {
   font-size: 12px;
+  line-height: 18px;
+  display: inline-block;
 }
 .imagecard-caption, figcaption {
   font-size: 16px;
